// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    15
     
    expenses
    s totaling 
    $239,988.97
  </h1>
</div>
`;

exports[`Should correctly render expensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
    s totaling 
    $2.39
  </h1>
</div>
`;
